# contract-gate

./: LICENSE  README.md  pyproject.toml
contract_gate/: cli.py  tableparse.py
contract_gate/gates/: __init__.py  coverage.py  data_binding.py  evidence.py  fidelity.py  golden_record.py  greenfield.py  manifest.py  port_const.py  testgen.py
docs/: TOOL-REQUIREMENTS.md  flow.drawio
examples/: DATA-BINDING.md  GAP-QA.md  SPEC.md  design.html
gates/: data_binding_gate.py  data_binding_gate_test.py
gates/fixtures/data_binding_gate/: fail-empty-null.map.md  fail-empty-source.map.md  fail-missing-null-col.map.md  pass-vn.map.md
tests/: test_cli.py  test_coverage.py  test_data_binding.py  test_evidence.py  test_fidelity.py  test_golden_record.py  test_greenfield.py  test_manifest.py  test_port_const.py  test_tableparse.py  test_testgen.py  test_tools.py
tests/fixtures/data_binding/: fail-annotated-question-source.map.md  fail-api-undeclared.map.md  fail-empty-format.map.md  fail-no-table.map.md  fail-placeholder-source.map.md  fail-unknown-type-gated.map.md  pass-api-existing-new.map.md  pass-delimiter-block.map.md  pass-en.map.md  pass-reordered.map.md
tests/fixtures/fidelity/: fail-empty-report.contract.md  fail-malformed-json.contract.md  fail-missing-overall.contract.md  fail-multi-table-second-fails.contract.md  fail-no-table.contract.md  fail-overall-fail.contract.md  fail-report-not-found.contract.md  fail-unexpected-overall.contract.md  (+4 more)
tools/: characterize_manifest.py  characterize_manifest_test.py  characterize_pdf.py  characterize_pdf_test.py
(+76 files in other folders)
